force-app/main/default/objects/Program__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <description>Program Published Date</description>
    <inlineHelpText>Program Published Date</inlineHelpText>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>