force-app/main/default/objects/Program__c/fields/Purchase_Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Program_Notes__c</fullName>
    <description>Free text field to provide a notes on the Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Free text field to provide a notes on the Industrial Account Program.</inlineHelpText>
    <label>Purchase Program Notes</label>
    <type>TextArea</type>
</CustomField>