force-app/main/default/objects/Program__c/fields/Require_Upload_of_Company_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Require_Upload_of_Company_Voucher__c</fullName>
    <description>Identify if Upload of Company Voucher is required.</description>
    <inlineHelpText>Identify if Upload of Company Voucher is required.</inlineHelpText>
    <label>Require Upload of Company Voucher</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eligibility_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>