force-app/main/default/objects/Program__c/fields/Rolling_Balance__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Balance__c</fullName>
    <label>Rolling Balance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>