force-app/main/default/objects/Program__c/fields/Sales_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract__c</fullName>
    <description>Description TBD</description>
    <inlineHelpText>Description TBD</inlineHelpText>
    <label>Sales Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>TXMAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>