force-app/main/default/objects/Program__c/fields/Sales_Contract_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Entity__c</fullName>
    <description>Description TBD</description>
    <inlineHelpText>Help Text TBD</inlineHelpText>
    <label>Sales Contract Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example 1</fullName>
            </value>
            <value>
                <fullName>Example 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>