force-app/main/default/objects/Program__c/fields/Sales_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Name__c</fullName>
    <description>Field used to pulls the Sales Contract Name to the Program record for reporting and external systems.</description>
    <formula>Sales_Contract_Reference__r.Sales_Contract_Name__c</formula>
    <label>Sales Contract Name</label>
    <type>Text</type>
</CustomField>