force-app/main/default/objects/Program__c/fields/Sales_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Number__c</fullName>
    <description>Field used to pulls the Sales Contract Number to the Program record for reporting and external systems.</description>
    <formula>Sales_Contract_Reference__r.Name</formula>
    <label>Sales Contract Number</label>
    <type>Text</type>
</CustomField>