force-app/main/default/objects/Program__c/fields/Sales_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dependent on the identified Sales Contract</description>
    <inlineHelpText>Dependent on the identified Sales Contract</inlineHelpText>
    <label>Sales Contract Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Contract__c</field>
            <operation>equals</operation>
            <valueField>Sales_Contract_References__c.Applicable_To__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Contract_References__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>