force-app/main/default/objects/Program__c/fields/Sales_Opportunity_Pairs__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity_Pairs__c</fullName>
    <description>The estimated sales potential in pairs of footwear for this Industrial Account Program in terms of number of pairs.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The estimated sales potential in pairs of footwear for this Industrial Account Program in terms of number of pairs.</inlineHelpText>
    <label>Sales Opportunity Pairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>