force-app/main/default/objects/Program__c/fields/Servicing_Level__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Level__c</fullName>
    <description>Controls the sharing (servicing stores) for an Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Controls the sharing (servicing stores) for an Industrial Account Program.
Dealer Only and Dealer Market Area Program are allowed for Dealer Stores. 
RWSS is allowed for Corporate Stores.</inlineHelpText>
    <label>Servicing Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RWSS</fullName>
            </value>
            <value>
                <fullName>RWSSPlus</fullName>
                <default>true</default>
                <label>RWSS +</label>
            </value>
            <value>
                <fullName>DealerMarketAreaProgram</fullName>
                <label>Dealer Market Area Program</label>
            </value>
            <value>
                <fullName>DealerOnly</fullName>
                <label>Dealer Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>