force-app/main/default/objects/Program__c/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <description>The dollar amount of the Subsidy if the subsidy type is $
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The dollar amount of the Subsidy if the subsidy type is $</inlineHelpText>
    <label>Subsidy $ Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>