force-app/main/default/objects/Program__c/fields/Subsidy_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Frequency__c</fullName>
    <description>The frequency in which an employee in the Industrial Account Program can receive a subsidy.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The frequency in which an employee in the Industrial Account Program can receive a subsidy.</inlineHelpText>
    <label>Subsidy Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Anniversary Date</fullName>
            </value>
            <value>
                <fullName>2x / yr</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
            <value>
                <fullName>Every other year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>