force-app/main/default/objects/Program__c/fields/Subsidy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Notes__c</fullName>
    <description>Free text field to provide notes on the subsidy.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Free text field to provide notes on the subsidy.</inlineHelpText>
    <label>Subsidy Notes</label>
    <type>TextArea</type>
</CustomField>