force-app/main/default/objects/Program__c/fields/Subsidy_Percent__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Percent__c</fullName>
    <description>The percentage amount of the subsidy if the subsidy type is %
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The percentage amount of the subsidy if the subsidy type is %</inlineHelpText>
    <label>Subsidy %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>