force-app/main/default/objects/Program__c/fields/Subsidy_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Tax__c</fullName>
    <description>Field determines the tax method for this program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>This field determines the tax method for this program.</inlineHelpText>
    <label>Tax Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SubsidyTaxed</fullName>
                <label>Subsidy Taxed / Tax Exempt</label>
            </value>
            <value>
                <fullName>TaxedUpToSubsidy</fullName>
                <default>true</default>
                <label>Taxed Up To Subsidy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>