force-app/main/default/objects/Program__c/fields/Subsidy_Type__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Type__c</fullName>
    <description>The type of subsidy.  A percentage, dollar, or open which means both.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The type of subsidy.  A percentage, dollar, or open which means both.</inlineHelpText>
    <label>Subsidy Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dollar</fullName>
                <label>$</label>
            </value>
            <value>
                <fullName>percentage</fullName>
                <label>%</label>
            </value>
            <value>
                <fullName>open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>