force-app/main/default/objects/Program__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the program is a template</description>
    <inlineHelpText>Indicates if the program is a template</inlineHelpText>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>