force-app/main/default/objects/Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of Industrial Account Program.  The type of program determines options for Subsidy, Eligibility, and Payroll Deduction.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The type of Industrial Account Program.  The type of program determines options for Subsidy, Eligibility, and Payroll Deduction.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CashandCarry</fullName>
                <label>Cash and Carry</label>
            </value>
            <value>
                <fullName>PayrollDeduction</fullName>
                <label>Payroll Deduction</label>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>SubsidyandPayrollDeduction</fullName>
                <label>Subsidy and Payroll Deduction</label>
            </value>
            <value>
                <fullName>SubsidywithPcard</fullName>
                <label>Subsidy with Pcard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>