force-app/main/default/objects/Program__c/fields/Voucher_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Distribution__c</fullName>
    <description>Indicates how the voucher is distributed to employees which are part of the Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates how the voucher is distributed to employees which are part of the Industrial Account Program.</inlineHelpText>
    <label>Voucher Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <isActive>false</isActive>
                <label>Text</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>