force-app/main/default/objects/Program__c/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <description>Record Type for Programs</description>
    <label>Program</label>
</RecordType>