force-app/main/default/objects/Program__c/recordTypes/Program_Template.recordType-meta.xml
<RecordType>
    <fullName>Program_Template</fullName>
    <active>true</active>
    <description>Record Type for Program Templates</description>
    <label>Program Template</label>
</RecordType>