force-app/main/default/objects/Program__c/validationRules/Program_Activation_Dependent_on_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Activation_Dependent_on_Credit</fullName>
    <active>true</active>
    <description>Program Activation Dependent on Credit</description>
    <errorConditionFormula>AND(
OR(ISNEW(), ISCHANGED(Active__c)),
NOT(Text(Account__r.Credit_Status__c) = &apos;Approved/Active&apos;),
Active__c = TRUE,
NOT(Text(Type__c) = &apos;CashAndCarry&apos;),
NOT(Text(Type__c) = &apos;SubsidywithPcard&apos;),
NOT(Template__c = TRUE))</errorConditionFormula>
    <errorMessage>You cannot activate your program until credit is approved.</errorMessage>
</ValidationRule>