force-app/main/default/objects/Program__c/validationRules/Program_Activation_PD.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Activation_PD</fullName>
    <active>true</active>
    <description>Requirements to activate a Payroll Deduction program</description>
    <errorConditionFormula>AND(
Active__c = TRUE,
ISPICKVAL(Type__c,&apos;PayrollDeduction&apos;), 
OR(
ISBLANK(Name),
ISBLANK( Account__c ),
ISBLANK( Text(Type__c )),
ISBLANK( Text(Servicing_Level__c )),
ISBLANK( Text(Subsidy_Tax__c )),
HasPricebook__c = FALSE,
Expiration_Date__c &lt; Today(),
ISBLANK( Activation_Date__c ),

/*Type Specific Requirements*/

ISBLANK( Text(Eligibility_Option__c)),
ISBLANK( Text(Mandatory__c )),
ISBLANK( Text(Accessories_Allowed_on_Payroll_Deduction__c ))
))</errorConditionFormula>
    <errorMessage>Your Payroll Deduction Program cannot be Activated until you populate the necessary information.</errorMessage>
</ValidationRule>