force-app/main/default/objects/Program__c/validationRules/Program_Activation_Subsidy_with_Pcard.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Activation_Subsidy_with_Pcard</fullName>
    <active>true</active>
    <description>Requirements to activate a Subsidy with Pcard program</description>
    <errorConditionFormula>AND(
Active__c = TRUE,
ISPICKVAL(Type__c,&apos;SubsidywithPcard&apos;),
OR(
ISBLANK(Name),
ISBLANK( Account__c ),
ISBLANK( Text(Servicing_Level__c )),
ISBLANK( Text(Subsidy_Tax__c )),
HasPricebook__c = FALSE,
Expiration_Date__c &lt; Today(),
ISBLANK( Activation_Date__c ),

/*Type Specific Requirements*/

ISBLANK( Text(Eligibility_Option__c)),
ISBLANK( Text(Subsidy_Type__c )),
ISBLANK( Text(Accessories_Allowed_on_Subsidy__c )),
ISBLANK( Text(Number_of_Pairs_Allowed__c )),
ISPICKVAL( Eligibility_Option__c , &apos;True&apos;)
))</errorConditionFormula>
    <errorMessage>Your Subsidy with PCard Program cannot be Activated until you populate the necessary information.</errorMessage>
</ValidationRule>