force-app/main/default/objects/Program__c/validationRules/Program_Cannot_Activate_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Cannot_Activate_Program</fullName>
    <active>false</active>
    <errorConditionFormula>Active__c = TRUE &amp;&amp;  Activation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>You cannot activate a program with an activation date in the future</errorMessage>
</ValidationRule>