force-app/main/default/objects/Program__c/validationRules/Program_Cannot_Activate_while_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Cannot_Activate_while_Scheduled</fullName>
    <active>false</active>
    <description>A Program cannot be activated when the Processing Status is still Scheduled</description>
    <errorConditionFormula>AND( 
Active__c = TRUE,
HasBeenActive__c = FALSE,
NOT(ISPICKVAL (Processing_Status__c,&apos;Completed&apos;)))</errorConditionFormula>
    <errorMessage>You cannot activate a Program until processing is completed.</errorMessage>
</ValidationRule>