force-app/main/default/objects/Program__c/validationRules/Program_Expiration_Date_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Expiration_Date_Active</fullName>
    <active>false</active>
    <description>You cannot have an active program with an expiration date in the past.</description>
    <errorConditionFormula>Active__c = TRUE &amp;&amp; Expiration_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>You cannot have an active program with an expiration date in the past.</errorMessage>
</ValidationRule>