force-app/main/default/objects/Program__c/validationRules/Program_Expiration_Later_Than_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Expiration_Later_Than_Activation</fullName>
    <active>true</active>
    <description>Expiration must be later than Activation</description>
    <errorConditionFormula>Activation_Date__c &gt;  Expiration_Date__c</errorConditionFormula>
    <errorMessage>Expiration Date must be greater than Activation Date</errorMessage>
</ValidationRule>