force-app/main/default/objects/Program__c/validationRules/Program_Expiration_Within_5Y_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Expiration_Within_5Y_Activation</fullName>
    <active>true</active>
    <description>Program Expiration Date Must Be Within 5 Years of Activation Date</description>
    <errorConditionFormula>AND(
ISCHANGED(Active__c),
Expiration_Date__c &gt; Activation_5_Years__c,
OR(
ISPICKVAL(Type__c,&apos;SubsidyandPayrollDeduction&apos;),
ISPICKVAL(Type__c,&apos;Subsidy&apos;)))</errorConditionFormula>
    <errorMessage>Expiration Date must be within 5 years of the Activation Date</errorMessage>
</ValidationRule>