force-app/main/default/objects/Program__c/validationRules/Program_Halt_Digital_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Halt_Digital_Conversion</fullName>
    <active>true</active>
    <description>Once a program is activated the Use Eligibility Tool setting cannot be changed. Please create a new program if needed.</description>
    <errorConditionFormula>AND(
HasBeenActive__c = TRUE,
ISCHANGED(Eligibility_Option__c),
NOT($Profile.Name = &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>Once a program is activated the Use Eligibility Tool setting cannot be changed. Please create a new program if needed.</errorMessage>
</ValidationRule>