force-app/main/default/objects/Program__c/validationRules/Program_LimitSubsidyAmounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_LimitSubsidyAmounts</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Subsidy_Amount__c &gt; 3000,
Subsidy_Amount__c &lt; 0,
Subsidy_Percent__c &gt; 100,
Subsidy_Percent__c &lt; 0)</errorConditionFormula>
    <errorMessage>Subsidies may not be negative, exceed $3,000 or 100%</errorMessage>
</ValidationRule>