force-app/main/default/objects/Program__c/validationRules/Program_Number_of_Pairs_cannot_be_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Number_of_Pairs_cannot_be_0</fullName>
    <active>true</active>
    <description>Number of Pairs cannot be &lt;= 0</description>
    <errorConditionFormula>AND(Number_of_Pairs_Allowed__c  &lt;= 0,
NOT(ISPICKVAL(Type__c,&apos;CashandCarry&apos;)))</errorConditionFormula>
    <errorMessage>Number of Pairs cannot be less than or equal to 0</errorMessage>
</ValidationRule>