force-app/main/default/objects/Program__c/validationRules/Program_Sales_Contract_Require_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Sales_Contract_Require_Reference</fullName>
    <active>true</active>
    <description>For specific Sales Contract, identification of the Reference is required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sales_Contract__c , &apos;TXMAS&apos;),
ISBLANK(Sales_Contract_Reference__c )
)</errorConditionFormula>
    <errorMessage>For the selected Sales Contract, Sales Contract Reference is required.</errorMessage>
</ValidationRule>