force-app/main/default/objects/Program__c/validationRules/Program_Subsidy_Type_Open_Reqs.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Subsidy_Type_Open_Reqs</fullName>
    <active>true</active>
    <description>Fields that are required to populate based on Subsidy Type Open</description>
    <errorConditionFormula>AND(
ISPICKVAL(Subsidy_Type__c, &apos;open&apos;),
ISBLANK( Max_Amount__c ),
ISBLANK(Number_of_Pairs_Allowed__c))</errorConditionFormula>
    <errorMessage>For the selected Subsidy Type, you must input the related values.</errorMessage>
</ValidationRule>