force-app/main/default/objects/Program__c/validationRules/Program_Subsidy_with_PCard_FALSE.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Subsidy_with_PCard_FALSE</fullName>
    <active>true</active>
    <description>For Subsidy with PCard, you must select P-Card Allowed.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c,&apos;SubsidywithPcard&apos;),
ISPICKVAL(Alternative_Payment__c,&apos;False&apos;)
)</errorConditionFormula>
    <errorMessage>For Subsidy with PCard, you must select P-Card Allowed.</errorMessage>
</ValidationRule>