force-app/main/default/objects/Program__c/validationRules/Program_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Template</fullName>
    <active>true</active>
    <description>If a program is a template it cannot be associated with an account</description>
    <errorConditionFormula>NOT(ISBLANK(Account__c)) &amp;&amp;  Template__c == TRUE</errorConditionFormula>
    <errorMessage>Program templates cannot be attached to accounts.  Please clone the template and attach the clone to your account.</errorMessage>
</ValidationRule>