force-app/main/default/objects/Program__c/validationRules/Program_Type_cannot_be_changed_after_Act.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Type_cannot_be_changed_after_Act</fullName>
    <active>true</active>
    <description>Program Type cannot be changed once the Program has been activated</description>
    <errorConditionFormula>AND(
ISCHANGED( Type__c ),
HasBeenActive__c = TRUE)</errorConditionFormula>
    <errorMessage>Program Type cannot be changed for Programs that have been Active</errorMessage>
</ValidationRule>