force-app/main/default/objects/Program__c/validationRules/Program_Use_Elig_Req_Ecomm_Enable.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Use_Elig_Req_Ecomm_Enable</fullName>
    <active>false</active>
    <description>If Use Eligibility Tool = Yes, select Yes or No in Ecomm Enabled</description>
    <errorConditionFormula>AND(
isPickVal(Eligibility_Option__c, &apos;True&apos;),
isBlank(TEXT( Ecomm_Enabled__c)))</errorConditionFormula>
    <errorMessage>If Use Eligibility Tool = Yes, select No or Yes for Ecomm Enabled. It can not be blank.</errorMessage>
</ValidationRule>