force-app/main/default/objects/Program__c/validationRules/Program_Use_Eligibility_req_Vouch_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Use_Eligibility_req_Vouch_Type</fullName>
    <active>true</active>
    <description>If Use Eligibility Tool = Yes, select the Voucher Type</description>
    <errorConditionFormula>AND(
isPickVal(Eligibility_Option__c, &apos;True&apos;),
isBlank(TEXT( Annual_Reset_or_Rollover__c)))</errorConditionFormula>
    <errorMessage>If Use Eligibility Tool = Yes, select the Voucher Type</errorMessage>
</ValidationRule>